# libInput

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  multi-pointers.cpp  query_state.cpp
src/: CMakeLists.txt
src/x11/: X11Mouse.cpp
